--- a/_posts/Spring/2022-11-13-Lombok.md
+++ b/_posts/Spring/2022-11-13-Lombok.md
@@ -178,6 +178,50 @@ public class User {
     }
 ```
 
+## RequiredArgsConstructor
+- 초기화 되지않은 final 필드나, @NonNull 이 붙은 필드에 대해 생성자를 생성해 준다.
+- @Autowired를 사용하지 않고 의존성 주입
+- 스프링 개발팀에서 생성자 주입을 사용할 것을 권장하는 이유는 한번 의존성 주입을 받은 객체는 프로그램이 끝날 때까지 변하지 않는 특징을 가지므로 불변성을 표시해주는 것이 좋기 때문이다. -> 객체의 불변성(Immutability) 보장
+
+### 특징
+- 코드 변이에 대한 안전성
+    - @RequiredArgsConstructor는 생성자 중에서 final 키워드가 붙은 주입에만 생성자를 만들어준다. final이 붙어있기 때문에 인스턴스가 생성될 때 1번만 참조되므로 코드 변이의 걱정은 사라진다.
+- 순환 참조에 대한 안전성(A 클래스가 B 클래스의 Bean 을 주입받고, B 클래스가 A 클래스의 Bean 을 주입받는 상황)
+    - 생성자 어노테이션을 사용할 경우에 순환 참조가 일어날 시  Exception이 발생하여 컴파일 중에 에러가 발생한다. 이를 통해 Test 단계에서 순환 참조를 파악하여 수정할 수 있다.
+
+``` java
+// as-is
+@RestController
+@RequestMapping("/example")
+public class RequiredArgsConstructorControllerExample {
+
+    private final FirstService firstService;
+    private final SecondService secondService;
+    private final ThirdService thirdService;
+
+    public RequiredArgsConstructorControllerExample(FirstService firstService, SecondService secondService, ThirdService thirdService){
+        this.firstService = firstService;
+        this.secondService = secondService;
+        this.thirdService = thirdService;
+    }
+
+    ...
+}
+
+// to-be
+@RestController
+@RequiredArgsConstructor
+@RequestMapping("/example")
+public class RequiredArgsConstructorControllerExample {
+
+    private final FirstService firstService;
+    private final SecondService secondService;
+    private final ThirdService thirdService;
+
+    ...
+}
+```
+
 ## ToString
 - ToString() 메서드를 생성해준다.
 - 기본적으로 static을 제외한 전체 변수에 대한 ToString()을 생성.
