--- a/_posts/Java/2018-07-25-JVM.md
+++ b/_posts/Java/2018-07-25-JVM.md
@@ -193,6 +193,6 @@ JAVA가 아닌 다른 언어로 작성된 코드를 위한 공간. Java Native I
 **Type Information (타입!)**  
 class인지 interface인지의 여부 저장. Type의 속성, 전체 이름, super 클래스의 전체 이름. (interface이거나 object인 경우 제외된다. 이건 Heap에서 관리함)  
 
-#### Heap 영역 [(다음페이지 설명)](/java/stack_heap.html)
+#### Heap 영역 [(다음페이지 설명)](/java/Stack-Heap.html)
 ![](/assets/img/java/jvm_7.png)
 
