--- a/_posts/Java/2016-10-10-Stream.md
+++ b/_posts/Java/2016-10-10-Stream.md
@@ -478,3 +478,326 @@ public class Main{
 	}
 }
 ```
+
+#### collect()와 Collectors
+collect()는 Collector를 매개변수로 하는 스트림의 최종연산  
+reduce와 차이점 - collect는 그룹별 하기 용이하다  
+
+``` java
+object collect(Collector collector) // Collector를 구현한 클래스의 객체를 매개변수로
+object collect(Supplier supplier, BiConsumer accumultor, BiConsumer combiner) // 잘 안쓰임
+```
+
+Collector는 수집(collect)에 필요한 메서드를 정의해 놓은 인터페이스
+``` java
+public interface Collector<T, A, R>{ // T(요소)를 A에 누적한 다음, 결과를 R로 변환해서 반환
+    Supplier<A> supplier(); // StringBuilder::new 누적할 곳
+    BiConsumer<A, T> accumulator(); // (sb, s) -> sb.append(s) 누적방법
+    BinaryOperator<A> combiner(); // (sb1, sb2) -> sb1.append(sb2) 결합방법(병렬)
+    Function<A, R> finisher(); // sb -> sb.toString() 최종변환
+    Set<Characteristics> characteristics(); // 컬렉터의 특성이 담긴 set을 반환
+    ...
+}
+```
+
+Collectors클래스는 다양한 기능의 컬렉터(Collector를 구현한 클래스)를 제공
+- 변환 : mapping(), toList(), toSet() toMap(), toCollection()...
+- 통계 : counting(), summingInt(), averagingInt(), maxBy(), minBy(), summarizingInt()...
+- 문자열 결합 : joining()
+- 리듀싱 : reducing()
+- 그룹화와 분할 : groupingBy(), partitioningBy(), collectingAndThen()
+
+변환 - toList(), toSet() toMap(), toCollection(), toArray();
+``` java
+List<String> names = stuStream.map(Student::getName).collect(Collectors.toList());
+ArrayList<String> list = names.stream().collect(Collectors.toCollection(ArrayList::new));
+Map<String, Person> map = personStream.collect(Collectors.toMap(p->p.getRegId(), p->p));
+
+// toArray()
+Student[] stuNames = studentStream.toArray(Student[]::new);
+Object[] stuNames = studentStream.toArray();
+```
+
+통계 - counting(), summingInt(), maxBy(), minBy()
+``` java
+long count = stuStream.count();
+long count = stuStream.collect(counting());
+
+long totalScore = stuStream.mapToInt(Student::getTotalScore).sum();
+long totalScore = stuStream.collect(summingInt(Strudent::getTotalScore));
+
+OptionalInt topScore = studentStream.mapToInt(Student::getTotalScore).max();
+Optional<Student> topStudent = stuStream.max(Comparator.comparingInt(Student::getTotalScore));
+Optional<Student> topStudent = stuStream.collect(maxBy(Comparator.comparingInt(Student::getTotalScore)));
+```
+
+스트림을 리듀싱 - reducing()
+
+``` java
+Collector reducing(BinaryOperator<T> op)
+Collector reducing(T identity, BinaryOperator<T> op)
+Collector reducing(U identity, Function<T,U> mapper,BinaryOperator<U> op)
+
+// ex)
+IntStream intStream = new Random().ints(1, 46).distinct().limit(6);
+
+OptionalInt max = intStream.reduce(Integer::max);
+Optional<Integer> max = intStream.boxed().collect(reducing(Integer::max));
+
+long sum = intStream.reduce(0, (a,b) -> a+b);
+long sum = intStream.boxed().collect(reducing(0, (a,b) -> a+b));
+
+int grandTotal = stuStream.map(Student::getTotalScore).reduce(0, Integer::sum);
+int grandTotal = stuStream.collect(reducing(0, Student::getTotalScore, Integer::sum));
+```
+
+문자열 스트림의 요소를 모두 연결 - joining()
+
+``` java
+String studentNames = stuStram.map(Student::getNAme).collect(joining());
+String studentNames = stuStram.map(Student::getNAme).collect(joining(","));
+String studentNames = stuStram.map(Student::getNAme).collect(joining(",","[","]"));
+String studentInfo = stuStream.collect(joining(","));
+```
+
+스트림의 요소를 2분할 - partitioningBy()
+``` java
+Collector partitioningBy(Prediate predicate)
+Collector partitioningBy(Predicate predicate, Collector downstream)
+```
+``` java
+import java.util.*;
+import java.util.stream.*;
+import java.util.stream.Collectors.*;
+import java.util.Comparator.*;
+
+class Student {
+	String name;
+	boolean isMale; // 성별
+	int hak;		// 학년
+	int ban;		// 반
+	int score;
+
+	Student(String name, boolean isMale, int hak, int ban, int score) {
+		this.name	= name;
+		this.isMale	= isMale;
+		this.hak	= hak;
+		this.ban	= ban;
+		this.score  = score;
+	}
+
+	String	getName()  { return name;}
+	boolean isMale()   { return isMale;}
+	int		getHak()   { return hak;}
+	int		getBan()   { return ban;}
+	int		getScore() { return score;}
+
+	public String toString() { 
+		return String.format("[%s, %s, %d학년 %d반, %3d점]", name, isMale ? "남":"여", hak, ban, score); 
+	}
+
+	enum Level {
+		HIGH, MID, LOW
+	}
+}
+
+
+public class Main{
+	public static void main(String[] args){
+		Student[] stuArr = {
+			new Student("나자바", true,  1, 1, 300),	
+			new Student("김지미", false, 1, 1, 250),	
+			new Student("김자바", true,  1, 1, 200),	
+			new Student("이지미", false, 1, 2, 150),	
+			new Student("남자바", true,  1, 2, 100),	
+			new Student("안지미", false, 1, 2,  50),	
+			new Student("황지미", false, 1, 3, 100),	
+			new Student("강지미", false, 1, 3, 150),	
+			new Student("이자바", true,  1, 3, 200),	
+
+			new Student("나자바", true,  2, 1, 300),	
+			new Student("김지미", false, 2, 1, 250),	
+			new Student("김자바", true,  2, 1, 200),	
+			new Student("이지미", false, 2, 2, 150),	
+			new Student("남자바", true,  2, 2, 100),	
+			new Student("안지미", false, 2, 2,  50),	
+			new Student("황지미", false, 2, 3, 100),	
+			new Student("강지미", false, 2, 3, 150),	
+			new Student("이자바", true,  2, 3, 200)	
+		};
+
+		// 1. 단순분할(성별로 분할)
+		Map<Boolean,List<Student>> ex1Map = Stream.of(stuArr)
+			.collect(Collectors.partitioningBy(Student::isMale));
+		ex1Map.get(true).stream().forEach(System.out::println);
+		ex1Map.get(false).stream().forEach(System.out::println);
+		System.out.println();
+
+		// 2. 단순분할 + 통계(성별 학생수)
+		Map<Boolean,Long> ex2Map = Stream.of(stuArr)
+			.collect(Collectors.partitioningBy(s -> s.isMale() , Collectors.counting()));
+		System.out.println(ex2Map.get(true));
+		System.out.println(ex2Map.get(false));
+
+		// 3. 단순분할 + 통게(설별 1등)
+		Map<Boolean,Optional<Student>> ex3Map = Stream.of(stuArr)
+			.collect(
+				Collectors.partitioningBy(
+					s-> s.isMale() 
+					, Collectors.maxBy(
+						Comparator.comparingInt(s -> s.getScore())
+					)
+				)
+			);
+		System.out.println(ex3Map.get(true));
+		System.out.println(ex3Map.get(false));
+		// 4. 다중분할(성별 불합격자, 100점 이하) 
+		Map<Boolean,Map<Boolean,List<Student>>> ex4Map = Stream.of(stuArr)
+			.collect(
+				Collectors.partitioningBy(
+					s->s.isMale(), 
+						Collectors.partitioningBy( t-> t.getScore() > 100 )
+				)
+			);
+	}
+}
+```
+
+스트림의 요소를 다분할 - groupingBy()
+
+``` java
+Collector groupingBy(Function classifier)
+Collector groupingBy(Function classifier, Collector downstream)
+Collector groupingBy(Function classifier, Supplier mapFactory,Collector downstream)
+```
+
+``` java
+import java.util.*;
+import java.util.stream.*;
+import java.util.stream.Collectors.*;
+import java.util.Comparator.*;
+
+class Student {
+	String name;
+	boolean isMale; // 성별
+	int hak;		// 학년
+	int ban;		// 반
+	int score;
+
+	Student(String name, boolean isMale, int hak, int ban, int score) { 
+		this.name	= name;
+		this.isMale	= isMale;
+		this.hak	= hak;
+		this.ban	= ban;
+		this.score  = score;
+	}
+
+	String	getName()  { return name;}
+	boolean isMale()   { return isMale;}
+	int		getHak()   { return hak;}
+	int		getBan()   { return ban;}
+	int		getScore() { return score;}
+
+	public String toString() { 
+		return String.format("[%s, %s, %d학년 %d반, %3d점]", name, isMale ? "남":"여", hak, ban, score); 
+	}
+
+	enum Level {
+		HIGH, MID, LOW
+	}
+}
+
+
+public class Main{
+	public static void main(String[] args){
+		Student[] stuArr = {
+			new Student("나자바", true,  1, 1, 300),	
+			new Student("김지미", false, 1, 1, 250),	
+			new Student("김자바", true,  1, 1, 200),	
+			new Student("이지미", false, 1, 2, 150),	
+			new Student("남자바", true,  1, 2, 100),	
+			new Student("안지미", false, 1, 2,  50),	
+			new Student("황지미", false, 1, 3, 100),	
+			new Student("강지미", false, 1, 3, 150),	
+			new Student("이자바", true,  1, 3, 200),	
+
+			new Student("나자바", true,  2, 1, 300),	
+			new Student("김지미", false, 2, 1, 250),	
+			new Student("김자바", true,  2, 1, 200),	
+			new Student("이지미", false, 2, 2, 150),	
+			new Student("남자바", true,  2, 2, 100),	
+			new Student("안지미", false, 2, 2,  50),	
+			new Student("황지미", false, 2, 3, 100),	
+			new Student("강지미", false, 2, 3, 150),	
+			new Student("이자바", true,  2, 3, 200)	
+		};
+
+		// 1. 단순그룹화(반별로 그룹화)
+		Map<Integer,List<Student>> ex1 = Stream.of(stuArr)
+			.collect(Collectors.groupingBy(s -> s.getBan()));
+		for(int k : ex1.keySet()){
+			for(Student s : ex1.get(k)){
+				System.out.println(s.toString());
+			}
+		}
+
+		// 2. 단순그룹화(성적별로 그룹화)
+		Map<Student.Level,List<Student>> ex2 = Stream.of(stuArr)
+			.collect(Collectors.groupingBy(
+					s-> {
+						if( s.getScore() >= 200 ) return Student.Level.HIGH;
+						else if( s.getScore() >= 100 ) return Student.Level.MID;
+						else return Student.Level.LOW;
+					}
+				)
+			);
+		for(Student.Level k : ex2.keySet()){
+			for(Student s : ex2.get(k)){
+				System.out.println(s.toString());
+			}
+		}
+		// 3. 단순그룹화 + 통계(성적별 학생수)
+		Map<Student.Level,Long> ex3 = Stream.of(stuArr)
+			.collect(Collectors.groupingBy(
+					s-> {
+						if( s.getScore() >= 200 ) return Student.Level.HIGH;
+						else if( s.getScore() >= 100 ) return Student.Level.MID;
+						else return Student.Level.LOW;
+					}, Collectors.counting()
+				)
+			);
+		for(Student.Level k : ex3.keySet()){
+			System.out.println(ex3.get(k));
+		}
+		// 4. 다중그룹화(학년별, 반별)
+		Map<Integer,Map<Integer,List<Student>>> ex4 = Stream.of(stuArr).collect(
+			Collectors.groupingBy( s-> s.getHak(), Collectors.groupingBy( s-> s.getBan()))
+		);
+		// 5. 다중그룹화 + 통계(학년별, 반별 1등)
+		Map<Integer,Map<Integer,Student>> ex5 = Stream.of(stuArr).collect(
+			Collectors.groupingBy( s-> s.getHak(),
+				Collectors.groupingBy(Student::getBan,
+					Collectors.collectingAndThen(
+						Collectors.maxBy(Comparator.comparingInt(Student::getScore)), Optional::get
+					)
+				)
+			)
+		);
+		// 6. 다중그룹화 + 통계(학년별, 반별 성적그룹)
+		Map<String, Set<Student.Level>> stuByScoreGroup = Stream.of(stuArr)
+			.collect(Collectors.groupingBy(s-> s.getHak() + "-" + s.getBan(),
+					Collectors.mapping(s-> {
+						 if(s.getScore() >= 200) return Student.Level.HIGH;
+					else if(s.getScore() >= 100) return Student.Level.MID;
+						 else                    return Student.Level.LOW;
+					} , Collectors.toSet())
+			));
+
+		Set<String> keySet2 = stuByScoreGroup.keySet();
+
+		for(String key : keySet2) {
+			System.out.println("["+key+"]" + stuByScoreGroup.get(key));
+		}
+	}
+}
+```
