--- a/_posts/Algorithm/2022-08-05-String.md
+++ b/_posts/Algorithm/2022-08-05-String.md
@@ -304,3 +304,379 @@ a#b!GE*T@S
 ​  
 ▣ 출력예제 1  
 S#T!EG*b@a  
+
+``` java
+import java.util.*;
+class Main {	
+	public String solution(String str){
+		String answer;
+		char[] s=str.toCharArray();
+		int lt=0, rt=str.length()-1;
+		while(lt<rt){
+			if(!Character.isAlphabetic(s[lt])) lt++;
+			else if(!Character.isAlphabetic(s[rt])) rt--;
+			else{
+				char tmp=s[lt];
+				s[lt]=s[rt];
+				s[rt]=tmp;
+				lt++;
+				rt--;
+			}
+		}
+		answer=String.valueOf(s);
+		return answer;
+	}
+
+	public static void main(String[] args){
+		Main T = new Main();
+		Scanner kb = new Scanner(System.in);
+		String str=kb.next();
+		System.out.println(T.solution(str));
+	}
+}
+
+```
+  
+## 6. 중복문자제거
+  
+소문자로 된 한개의 문자열이 입력되면 중복된 문자를 제거하고 출력하는 프로그램을 작성하세요. 제거된 문자열의 각 문자는 원래 문자열의 순서를 유지합니다.  
+  
+▣ 입력설명  
+첫 줄에 문자열이 입력됩니다. 문자열의 길이는 100을 넘지 않는다.  
+  
+▣ 출력설명  
+첫 줄에 중복문자가 제거된 문자열을 출력합니다.  
+  
+▣ 입력예제 1  
+ksekkset  
+  
+▣ 출력예제 1  
+kset  
+
+``` java
+import java.util.*;
+class Main {	
+	public String solution(String str){
+		String answer="";
+		for(int i=0; i<str.length(); i++){
+			//System.out.println(str.charAt(i)+" "+i+" "+str.indexOf(str.charAt(i)));
+			if(str.indexOf(str.charAt(i))==i) answer+=str.charAt(i);
+		}
+		return answer;
+	}
+
+	public static void main(String[] args){
+		Main T = new Main();
+		Scanner kb = new Scanner(System.in);
+		String str=kb.next();
+		System.out.print(T.solution(str));
+	}
+}
+
+```
+  
+## 7. 회문 문자열  
+  
+앞에서 읽을 때나 뒤에서 읽을 때나 같은 문자열을 회문 문자열이라고 합니다.  
+문자열이 입력되면 해당 문자열이 회문 문자열이면 "YES", 회문 문자열이 아니면 “NO"를 출력하는 프로그램을 작성하세요.  
+단 회문을 검사할 때 대소문자를 구분하지 않습니다.  
+  
+▣ 입력설명  
+첫 줄에 길이 100을 넘지 않는 공백이 없는 문자열이 주어집니다.  
+  
+▣ 출력설명  
+첫 번째 줄에 회문 문자열인지의 결과를 YES 또는 NO로 출력합니다.  
+  
+▣ 입력예제 1  
+gooG  
+  
+▣ 출력예제 1  
+YES  
+
+``` java
+import java.util.*;
+class Main {	
+	public String solution(String str){
+		String answer="YES";
+		str=str.toUpperCase();
+		int len=str.length();
+		for(int i=0; i<len/2; i++){
+			if(str.charAt(i)!=str.charAt(len-i-1)) answer="NO";
+		}
+		return answer;
+	}
+
+	public static void main(String[] args){
+		Main T = new Main();
+		Scanner kb = new Scanner(System.in);
+		String str=kb.next();
+		System.out.print(T.solution(str));
+	}
+}
+
+import java.util.*;
+class Main {	
+	public String solution(String str){
+		String answer="NO";
+		String tmp=new StringBuilder(str).reverse().toString();
+		if(str.equalsIgnoreCase(tmp)) answer="YES";
+		return answer;
+	}
+
+	public static void main(String[] args){
+		Main T = new Main();
+		Scanner kb = new Scanner(System.in);
+		String str=kb.next();
+		System.out.print(T.solution(str));
+	}
+}
+
+// 1번 tip : charAt
+// 2번 tip : StringBuilder(String).reverse().toString(), equalsIgnoreCase
+```
+
+## 8. 유효한 팰린드롬
+
+앞에서 읽을 때나 뒤에서 읽을 때나 같은 문자열을 팰린드롬이라고 합니다.  
+문자열이 입력되면 해당 문자열이 팰린드롬이면 "YES", 아니면 “NO"를 출력하는 프로그램을 작성하세요.  
+단 회문을 검사할 때 알파벳만 가지고 회문을 검사하며, 대소문자를 구분하지 않습니다.  
+알파벳 이외의 문자들의 무시합니다.  
+  
+▣ 입력설명  
+첫 줄에 길이 100을 넘지 않는 공백이 없는 문자열이 주어집니다.  
+  
+▣ 출력설명  
+첫 번째 줄에 팰린드롬인지의 결과를 YES 또는 NO로 출력합니다.  
+  
+▣ 입력예제 1  
+found7, time: study; Yduts; emit, 7Dnuof  
+  
+▣ 출력예제 1  
+YES  
+
+``` java
+import java.util.*;
+class Main {	
+	public String solution(String s){
+		String answer="NO";
+		s=s.toUpperCase().replaceAll("[^A-Z]", "");
+		String tmp=new StringBuilder(s).reverse().toString();
+		if(s.equals(tmp)) answer="YES";
+		return answer;
+	}
+
+	public static void main(String[] args){
+		Main T = new Main();
+		Scanner kb = new Scanner(System.in);
+		String str=kb.nextLine();
+		System.out.print(T.solution(str));
+	}
+}
+```
+
+## 9. 숫자만 추출
+  
+문자와 숫자가 섞여있는 문자열이 주어지면 그 중 숫자만 추출하여 그 순서대로 자연수를 만듭니다.  
+만약 “tge0a1h205er”에서 숫자만 추출하면 0, 1, 2, 0, 5이고 이것을 자연수를 만들면 1205이 됩니다.  
+추출하여 만들어지는 자연수는 100,000,000을 넘지 않습니다.  
+  
+▣ 입력설명  
+첫 줄에 숫자가 썩인 문자열이 주어집니다. 문자열의 길이는 100을 넘지 않습니다.  
+  
+▣ 출력설명  
+첫 줄에 자연수를 출력합니다.  
+  
+▣ 입력예제 1  
+g0en2T0s8eSoft  
+  
+▣ 출력예제 1  
+208  
+  
+``` java
+import java.util.*;
+class Main {	
+	public int solution(String s){
+		//int answer=0;
+		String answer="";
+		for(char x : s.toCharArray()){
+			//if(x>=48 && x<=57) answer=answer*10+(x-48);
+			/*if(Character.isDigit(x)){
+				answer=answer*10+ Character.getNumericValue(x);
+			}*/
+			if(Character.isDigit(x)) answer+=x;
+		}
+		return Integer.parseInt(answer);
+	}
+
+	public static void main(String[] args){
+		Main T = new Main();
+		Scanner kb = new Scanner(System.in);
+		String str=kb.next();
+		System.out.print(T.solution(str));
+	}
+}
+
+// tip : Character.isDigit(x), Character.getNumericValue(x)
+```
+
+## 10. 가장 짧은 문자거리
+  
+한 개의 문자열 s와 문자 t가 주어지면 문자열 s의 각 문자가 문자 t와 떨어진 최소거리를 출력하는 프로그램을 작성하세요.  
+  
+▣ 입력설명  
+첫 번째 줄에 문자열 s와 문자 t가 주어진다. 문자열과 문자는 소문자로만 주어집니다.  
+문자열의 길이는 100을 넘지 않는다.  
+  
+▣ 출력설명  
+첫 번째 줄에 각 문자열 s의 각 문자가 문자 t와 떨어진 거리를 순서대로 출력한다.  
+  
+▣ 입력예제 1  
+teachermode e  
+  
+▣ 출력예제 1  
+1 0 1 2 1 0 1 2 2 1 0  
+
+``` java
+import java.util.*;
+class Main {	
+	public int[] solution(String s, char t){
+		int[] answer=new int[s.length()];
+		int p=1000;
+		for(int i=0; i<s.length(); i++){
+			if(s.charAt(i)==t){
+				p=0;
+				answer[i]=p;
+			}
+			else{
+				p++;
+				answer[i]=p;
+			}
+		}
+		p=1000;
+		for(int i=s.length()-1; i>=0; i--){
+			if(s.charAt(i)==t) p=0;
+			else{
+				p++;
+				answer[i]=Math.min(answer[i], p);
+			}
+		}
+		return answer;
+	}
+
+	public static void main(String[] args){
+		Main T = new Main();
+		Scanner kb = new Scanner(System.in);
+		String str=kb.next();
+		char c=kb.next().charAt(0);
+		for(int x : T.solution(str, c)){
+			System.out.print(x+" ");
+		}
+	}
+}
+
+// tip : Math.min(x,y)
+```
+  
+## 11. 문자열 압축
+  
+알파벳 대문자로 이루어진 문자열을 입력받아 같은 문자가 연속으로 반복되는 경우 반복되는 문자 바로 오른쪽에 반복 횟수를 표기하는 방법으로 문자열을 압축하는 프로그램을 작성하시오. 단 반복횟수가 1인 경우 생략합니다.  
+  
+▣ 입력설명  
+첫 줄에 문자열이 주어진다. 문자열의 길이는 100을 넘지 않는다.  
+  
+▣ 출력설명  
+첫 줄에 압축된 문자열을 출력한다.  
+  
+▣ 입력예제 1  
+KKHSSSSSSSE  
+  
+▣ 출력예제 1  
+K2HS7E  
+
+``` java
+import java.util.*;
+class Main {	
+	public String solution(String s){
+		String answer="";
+		s=s+" ";
+		int cnt=1;
+		for(int i=0; i<s.length()-1; i++){
+			if(s.charAt(i)==s.charAt(i+1)) cnt++;
+			else{
+				answer+=s.charAt(i);
+				if(cnt>1) answer+=String.valueOf(cnt);
+				cnt=1;
+			}
+		}
+		return answer;
+	}
+
+	public static void main(String[] args){
+		Main T = new Main();
+		Scanner kb = new Scanner(System.in);
+		String str=kb.next();
+		System.out.println(T.solution(str));
+	}
+}
+
+// tip : String.valueOf(Number);
+```
+  
+## 12. 암호
+  
+현수는 영희에게 알파벳 대문자로 구성된 비밀편지를 매일 컴퓨터를 이용해 보냅니다.  
+비밀편지는 현수와 영희가 서로 약속한 암호로 구성되어 있습니다.  
+비밀편지는 알파벳 한 문자마다 # 또는 *이 일곱 개로 구성되어 있습니다.  
+만약 현수가 “#*****#”으로 구성된 문자를 보냈다면 영희는 현수와 약속한 규칙대로 다음과 같이 해석합니다.  
+1. “#*****#”를 일곱자리의 이진수로 바꿉니다. #은 이진수의 1로, *이진수의 0으로 변환합니다. 결과는 “1000001”로 변환됩니다.  
+2. 바뀐 2진수를 10진수화 합니다. “1000001”을 10진수화 하면 65가 됩니다.  
+3. 아스키 번호가 65문자로 변환합니다. 즉 아스크번호 65는 대문자 'A'입니다.  
+참고로 대문자들의 아스키 번호는 'A'는 65번, ‘B'는 66번, ’C'는 67번 등 차례대로 1씩 증가하여 ‘Z'는 90번입니다.  
+현수가 4개의 문자를 다음과 같이 신호로 보냈다면  
+#****###**#####**#####**##**  
+이 신호를 4개의 문자신호로 구분하면  
+#****## --> 'C'  
+#**#### --> 'O'  
+#**#### --> 'O'  
+#**##** --> 'L'  
+최종적으로 “COOL"로 해석됩니다.  
+현수가 보낸 신호를 해석해주는 프로그램을 작성해서 영희를 도와주세요.  
+  
+▣ 입력설명  
+첫 줄에는 보낸 문자의 개수(10을 넘지 안습니다)가 입력된다. 다음 줄에는 문자의 개수의 일곱 배 만큼의 #또는 * 신호가 입력됩니다. 현수는 항상 대문자로 해석할 수 있는 신호를 보낸다고 가정합니다.  
+  
+▣ 출력설명  
+영희가 해석한 문자열을 출력합니다.  
+  
+▣ 입력예제 1  
+4  
+#****###**#####**#####**##**  
+  
+▣ 출력예제 1  
+COOL  
+  
+``` java
+import java.util.*;
+class Main {	
+	public String solution(int n, String s){
+		String answer="";
+		for(int i=0; i<n; i++){
+			String tmp=s.substring(0, 7).replace('#', '1').replace('*', '0');
+			int num=Integer.parseInt(tmp, 2);
+			answer+=(char)num;
+			s=s.substring(7);
+		}
+		return answer;
+	}
+
+	public static void main(String[] args){
+		Main T = new Main();
+		Scanner kb = new Scanner(System.in);
+		int n=kb.nextInt();
+		String str=kb.next();
+		System.out.println(T.solution(n, str));
+	}
+}
+
+// tip : parseInt, subString
+```
