--- a/_posts/Etc/2022-12-11-jenkins.md
+++ b/_posts/Etc/2022-12-11-jenkins.md
@@ -15,6 +15,13 @@ tags:     Etc
 
 <!-- text -->
 
+## 기록
+이번에 운영하는 플랫폼의 Gitlab과 jenkins를 통한 CI/CD 환경을 구축할 일이 생겨 그 과정을 기록 한다.  
+  
+## 환경
+- spring, maven
+- springboot, gradle 환경
+
 ## jenkins 란?
 > 젠킨스(Jenkins)는 거의 모든 언어의 조합과 소스코드 리포지토리(Repository)에 대한 지속적인 통합과 지속적인 전달 환경을 구축하기 위한 간단한 방법을 제공한다.  
 젠킨스는 다른 일상적인 개발 작업을 자동화할 뿐 아니라 파이프라인(Pipeline)을 사용해 거의 모든 언어의 조합과 소스코드 리포지토리에 대한 지속적인 통합과 지속적인 전달 환경을 구축하기 위한 간단한 방법을 제공한다.  
