--- a/_posts/Algorithm/2022-08-05-String.md
+++ b/_posts/Algorithm/2022-08-05-String.md
@@ -6,7 +6,7 @@ category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# 1. String
+# 1&#46; String
 
 <!--more-->
 <!-- Table of contents -->
