--- a/_posts/Algorithm/2022-09-08-Array.md
+++ b/_posts/Algorithm/2022-09-08-Array.md
@@ -6,7 +6,7 @@ category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# 2. Array
+# 2&#46; Array
 
 <!--more-->
 <!-- Table of contents -->
