--- a/_posts/Algorithm/2022-09-08-Array.md
+++ b/_posts/Algorithm/2022-09-08-Array.md
@@ -107,7 +107,7 @@ class Main {
 A, B 두 사람이 가위바위보 게임을 합니다. 총 N번의 게임을 하여 A가 이기면 A를 출력하고, B가 이기면 B를 출력합니다. 비길 경우에는 D를 출력합니다.  
 가위, 바위, 보의 정보는 1:가위, 2:바위, 3:보로 정하겠습니다.  
 예를 들어 N=5이면  
-![alt text](image.png)  
+![alt text](/assets/img/algorithm/image.png)  
 두 사람의 각 회의 가위, 바위, 보 정보가 주어지면 각 회를 누가 이겼는지 출력하는 프로그램을 작성하세요.  
   
 ▣ 입력설명  
@@ -329,7 +329,7 @@ OX 문제는 맞거나 틀린 두 경우의 답을 가지는 문제를 말한다
 예를 들어, 아래와 같이 10 개의 OX 문제에서 답이 맞은 문제의 경우에는 1로 표시하고, 틀린 경우에는 0으로 표시하였을 때, 점수 계산은 아래 표와 같이 계산되어, 총 점수는 1+1+2+3+1+2=10 점이다.  
 1 0 1 1 1 0 0 1 1 0  
   
-![alt text](image-1.png)  
+![alt text](/assets/img/algorithm/image-1.png)  
   
 시험문제의 채점 결과가 주어졌을 때, 총 점수를 계산하는 프로그램을 작성하시오.  
   
@@ -422,7 +422,7 @@ class Main {
 ## 9. 격자판 최대합
   
 5*5 격자판에 아래롸 같이 숫자가 적혀있습니다.  
-![alt text](image-2.png)  
+![alt text](/assets/img/algorithm/image-2.png)  
 N*N의 격자판이 주어지면 각 행의 합, 각 열의 합, 두 대각선의 합 중 가 장 큰 합을 출력합니다.  
   
 ▣ 입력설명  
@@ -490,7 +490,7 @@ class Main {
 지도 정보가 N*N 격자판에 주어집니다. 각 격자에는 그 지역의 높이가 쓰여있습니다. 각 격자판의 숫자 중 자신의 상하좌우 숫자보다 큰 숫자는 봉우리 지역입니다. 봉우리 지역이 몇 개 있는 지 알아내는 프로그램을 작성하세요.  
 격자의 가장자리는 0으로 초기화 되었다고 가정한다.  
 만약 N=5 이고, 격자판의 숫자가 다음과 같다면 봉우리의 개수는 10개입니다.  
-![alt text](image-3.png)  
+![alt text](/assets/img/algorithm/image-3.png)  
 ▣ 입력설명  
 첫 줄에 자연수 N이 주어진다.(2<=N<=50)  
 두 번째 줄부터 N줄에 걸쳐 각 줄에 N개의 자연수가 주어진다. 각 자연수는 100을 넘지 않는다.  
@@ -555,7 +555,7 @@ class Main {
   
 김갑동 선생님은 올해 6학년 1반 담임을 맡게 되었다. 김갑동 선생님은 우선 임시로 반장을 정하고 학생들이 서로 친숙해진 후에 정식으로 선거를 통해 반장을 선출하려고 한다. 그는 자기반 학생 중에서 1학년부터 5학년까지 지내오면서 한번이라도 같은 반이었던 사람이 가장 많은 학생을 임시 반장으로 정하려 한다.  
 그래서 김갑동 선생님은 각 학생들이 1학년부터 5학년까지 몇 반에 속했었는지를 나타내는 표를 만들었다. 예를 들어 학생 수가 5명일 때의 표를 살펴보자.  
-![alt text](image-4.png)  
+![alt text](/assets/img/algorithm/image-4.png)  
 위 경우에 4번 학생을 보면 3번 학생과 2학년 때 같은 반이었고, 3번 학생 및 5번 학생과 3학년 때 같은 반이었으며, 2번 학생과는 4학년 때 같은 반이었음을 알 수 있다. 그러므로 이 학급에서 4번 학생과 한번이라도 같은 반이었던 사람은 2번 학생, 3번 학생과 5번 학생으로 모두 3명이다. 이 예에서 4번 학생이 전체 학생 중에서 같은 반이었던 학생 수가 제일 많으므로 임시 반장이 된다.  
 각 학생들이 1학년부터 5학년까지 속했던 반이 주어질 때, 임시 반장을 정하는 프로그램을 작성하시오.  
   
