--- a/_posts/Algorithm/2022-11-25-Greedy.md
+++ b/_posts/Algorithm/2022-11-25-Greedy.md
@@ -312,7 +312,7 @@ class Main {
 ## 5. 다익스트라 알고리즘
   
 아래의 가중치 방향그래프에서 1번 정점에서 모든 정점으로의 최소 거리비용을 출력하는 프로그램을 작성하세요. (경로가 없으면 Impossible를 출력한다)  
-![alt text](image-28.png)  
+![alt text](/assets/img/algorithm/image-28.png)  
 ▣ 입력설명  
 첫째 줄에는 정점의 수 N(1<=N<=20)와 간선의 수 M가 주어진다. 그 다음부터 M줄에 걸쳐 연결정보와 거리비용이 주어진다.  
   
@@ -468,7 +468,7 @@ class Main {
 원더랜드에 문제가 생겼다. 원더랜드의 각 도로를 유지보수하는 재정이 바닥난 것이다.  
 원더랜드는 모든 도시를 서로 연결하면서 최소의 유지비용이 들도록 도로를 선택하고 나머지 도로는 폐쇄하려고 한다.  
 아래의 그림은 그 한 예를 설명하는 그림이다.  
-![alt text](image-29.png)  
+![alt text](/assets/img/algorithm/image-29.png)  
 위의 지도는 각 도시가 1부터 9로 표현되었고, 지도의 오른쪽은 최소비용 196으로 모든 도시를 연결하는 방법을 찾아낸 것이다.  
   
 ▣ 입력설명  
@@ -556,7 +556,7 @@ class Main {
 원더랜드에 문제가 생겼다. 원더랜드의 각 도로를 유지보수하는 재정이 바닥난 것이다.  
 원더랜드는 모든 도시를 서로 연결하면서 최소의 유지비용이 들도록 도로를 선택하고 나머지 도로는 폐쇄하려고 한다.  
 아래의 그림은 그 한 예를 설명하는 그림이다.  
-![alt text](image-30.png)  
+![alt text](/assets/img/algorithm/image-30.png)  
 위의 지도는 각 도시가 1부터 9로 표현되었고, 지도의 오른쪽은 최소비용 196으로 모든 도시를 연결하는 방법을 찾아낸 것이다.  
   
 ▣ 입력설명  
