--- a/_posts/Etc/2022-10-10-English.md
+++ b/_posts/Etc/2022-10-10-English.md
@@ -61,5 +61,23 @@ tags:     Etc
     <tr><td>all the way home from school.</td><td>학교에서 집에 오는 내내.</td></tr>
     <tr><td>who did she know who had a problem?</td><td>누구인지 그녀는 알았을까? 누가 문제를 갖고 있는지?</td></tr>
     <tr><td>for the rest of the week</td><td>남은 한 주 동안</td></tr>
-    <tr><td>23/5/19까지 함</td><td></td></tr>
+    <tr><td>Mr Brown asked everyone to talk about their inventions.</td><td>브라운씨는 모든 사람들에게 그들의 발명품에 대해 이야기해달라고 부탁했습니다.</td></tr>
+    <tr><td>That might be dangerus</td><td>위험할 수도 있습니다(might 설명 참고)</td></tr>
+    <tr><td>It took some work to find the best way to fix the problem.</td><td>약간의 작업이 소요되었다 찾기 위해 최선의 방법을 문제를 해결할 수 있는</td></tr>
+    <tr><td>I came up with this</td><td>나는 생각해 냈다 이것을</td></tr>
+    <tr><td>They have invented machines to help them get around</td><td>그들은 그들이 돌아다닐 수 있도록 기계를 발명했습니다(5형식)</td></tr>
+    <tr><td>wheels have rubber on the outside</td><td>바퀴는 바깥쪽에 고무를 가지고 있습니다</td></tr>
+    <tr><td>all over the world</td><td>전 세계적으로(all over는 공간과 쓰이며 범위를 뜻함)</td></tr>
+    <tr><td>before he died, he made ..</td><td>그가 죽기 전에, 그는 만들었다 ..</td></tr>
+    <tr><td>With these glasses, people could ..</td><td>이 안경들과 함께, 사람들은 할 수 있었다 ..</td></tr>
+    <tr><td>people helped make the kinds of dog we know today.</td><td>사람들은 오늘날 우리가 알고 있는 종류의 개를 만드는 것을 도왔습니다.(help 설명 참고)</td></tr>
+    <tr><td>Those wolves had pups that humans raised</td><td>그 늑대들은 사람들이 키운 새끼들을 가졌다</td></tr>
+    <tr><td>it rains a lot there</td><td>비가 많이 온다 거기는</td></tr>
+    <tr><td>6월 1일 할 것</td><td></td></tr>
 </table>
+
+## might와 may차이점
+> "might"와 "may" 모두 가능성을 나타내지만, "might"는 보통 더 낮은 가능성이나 과거의 상황, 가정법에서 사용되며, "may"는 현재나 미래의 가능성, 공손한 요청이나 제안에서 더 자주 사용됩니다. 
+  
+## help
+> 영어에서 "help" 동사는 다른 동사와 함께 사용될 때 특별한 구조를 가집니다. "help" 동사 다음에는 기본형 동사(to 없이) 또는 "to"를 포함한 무한형 동사가 올 수 있습니다.
