--- a/_posts/Jpa/2021-02-18-Entity.md
+++ b/_posts/Jpa/2021-02-18-Entity.md
@@ -84,8 +84,8 @@ public class Member {
 // SEQUENCE 전략 - 특징
 @Entity
 @SequenceGenerator(
-    name = “MEMBER_SEQ_GENERATOR",
-    sequenceName = “MEMBER_SEQ", //매핑할 데이터베이스 시퀀스 이름 
+    name = "MEMBER_SEQ_GENERATOR",
+    sequenceName = "MEMBER_SEQ", //매핑할 데이터베이스 시퀀스 이름 
     initialValue = 1, allocationSize = 1)
 public class Member {
     @Id
@@ -119,6 +119,8 @@ public class Member {
 ## Entity간 연관관계 맵핑
 > JPA는 @ManyToOne, @OneToMany, @OneToOne, @ManyToMany 어노테이션으로 연관 관계를 매핑하고, 연관 관계의 주인이 외래 키를 관리한다.(등록, 수정)  
 > 연관 관계의 주인은 주로 'Many' 쪽에 설정하며, 다음과 같이 사용한다.(또는 외래 키가 있는 있는 곳)  
+> 일대다에서 일쪽은 @JoinColumn을 필수로 설정해야 한다. 그렇지 않으면 조인 테이블 방식을 사용함(중간에 테이블을 하나 추가함)  
+> 다대다 관계는 배우지도 말자, 연결 테이블을 엔티티로 승격하여 사용.
 
 ``` java
     @ManyToOne
@@ -149,3 +151,113 @@ public class Member {
 
     em.persist(member);
 ```
+
+## 상속관계 매핑
+
+> 슈퍼타입 서브타입 논리 모델을 실제 물리 모델로 구현하는 방법  
+> 부모 엔티티와 자식 엔티티가 필요할때 사용  
+![alt text](image-2.png)
+
+### 주요 어노테이션
+
+- @Inheritance(strategy=InheritanceType.XXX) 
+  - JOINED: 조인 전략(말 그대로 나눠서 조인)
+  - SINGLE_TABLE: 단일 테이블 전략(하나의 테이블에 다 때려 박기)
+  - TABLE_PER_CLASS: 구현 클래스마다 테이블 전략(아무 관계없이 테이블 만들기. 이건 안씀)
+- @DiscriminatorColumn(name="DTYPE")
+- @DiscriminatorValue("XXX")
+
+``` java
+@Entity
+@Inheritance(strategy = InheritanceType.JOINED)	// 여기 들어가는 옵션에 따라 테이블이 생성 된다.
+@DiscriminatorColumn(name="type")		// 구분 하는 칼럼	
+public abstract class Item {
+	@Id
+	@GeneratedValue(strategy=GenerationType.IDENTITY)
+	@Column(name="no")
+	private Integer no;
+	
+	@Column(name="name")
+	private String name;
+	
+	@Column(name="price")
+	private Integer price;
+}
+
+
+@Entity
+@DiscriminatorValue("movie")
+public class Movie extends Item{
+	private String actor;
+}
+
+
+@Entity
+@DiscriminatorValue("music")
+public class Music extends Item{
+	private String artist;
+}
+
+
+@Entity
+@DiscriminatorValue("book")
+public class Book extends Item{
+	private String writer;
+}
+```
+#### JOINED
+![alt text](image-5.png)
+
+#### SINGLE_TABLE
+![alt text](image-6.png)
+
+
+### @MappedSuperclass
+
+> 공통 매핑 정보가 필요할 때 사용  
+> 상속 관계에는 있지만 엔티티에는 영향을 주기 싫은 경우 사용(부모 엔티티가 따로 만들어지는걸 원하지 않음)
+![alt text](image-3.png)
+
+- 상속관계 매핑X
+- 엔티티X, 테이블과 매핑X
+- 부모 클래스를 상속 받는 자식 클래스에 매핑 정보만 제공
+- 조회, 검색 불가(em.ﬁnd(BaseEntity) 불가)
+- 직접 생성해서 사용할 일이 없으므로 추상 클래스 권장
+- 테이블과 관계 없고, 단순히 엔티티가 공통으로 사용하는 매핑 정보를 모으는 역할
+- 주로 등록일, 수정일, 등록자, 수정자 같은 전체 엔티티에서 공통으로 적용하는 정보를 모을 때 사용
+- 참고: @Entity 클래스는 엔티티나 @MappedSuperclass로 지정한 클래스만 상속 가능
+
+``` java
+@MappedSuperclass
+public abstract class Item {
+	@Id
+	@GeneratedValue(strategy=GenerationType.IDENTITY)
+	@Column(name = "no")
+	private Integer no;
+	
+	@Column(name = "name")
+	private String name;
+	
+	@Column(name = "price")
+	private Integer price;
+}
+
+
+@Entity
+@AttributeOverride(name="no", column=@Column(name="actor_no"))
+public class Movie extends Item{
+	private String actor;
+}
+
+
+@Entity
+@AttributeOverrides({
+	@AttributeOverride(name="no", column=@Column(name="book_no")),
+	@AttributeOverride(name="name", column=@Column(name="book_name"))
+})
+public class Book extends Item{
+	private String writer;
+}
+```
+
+![alt text](image-4.png)
