--- a/_posts/Jpa/2021-02-18-Entity.md
+++ b/_posts/Jpa/2021-02-18-Entity.md
@@ -6,7 +6,7 @@ category: Jpa
 more_posts: posts.md
 tags:     Jpa
 ---
-# Mapping
+# 2. Entity and Mapping
 
 <!--more-->
 <!-- Table of contents -->
@@ -215,7 +215,8 @@ public class Book extends Item{
 ### @MappedSuperclass
 
 > 공통 매핑 정보가 필요할 때 사용  
-> 상속 관계에는 있지만 엔티티에는 영향을 주기 싫은 경우 사용(부모 엔티티가 따로 만들어지는걸 원하지 않음)
+> 상속 관계에는 있지만 엔티티에는 영향을 주기 싫은 경우 사용(부모 엔티티가 따로 만들어지는걸 원하지 않음)  
+
 ![alt text](image-3.png)
 
 - 상속관계 매핑X
