--- a/_posts/Jpa/2021-01-28-Jpa.md
+++ b/_posts/Jpa/2021-01-28-Jpa.md
@@ -6,7 +6,7 @@ category: Jpa
 more_posts: posts.md
 tags:     Jpa
 ---
-# 1. JPA 시작
+# [JPA BASIC] 1. JPA 시작
 
 <!--more-->
 <!-- Table of contents -->
