--- a/_posts/Jpa/2021-02-18-Entity.md
+++ b/_posts/Jpa/2021-02-18-Entity.md
@@ -6,7 +6,7 @@ category: Jpa
 more_posts: posts.md
 tags:     Jpa
 ---
-# 2. Entity and Mapping
+# [JPA BASIC] 2. Entity and Mapping
 
 <!--more-->
 <!-- Table of contents -->
