--- a/_posts/Jpa/2021-03-12-Type.md
+++ b/_posts/Jpa/2021-03-12-Type.md
@@ -1,12 +1,12 @@
 ---
 layout:   post
-title:    "Type_Query"
-subtitle: "Type_Query"
+title:    "Type"
+subtitle: "Type"
 category: Jpa
 more_posts: posts.md
 tags:     Jpa
 ---
-# 4. Type and Query
+# [JPA BASIC] 4. Type
 
 <!--more-->
 <!-- Table of contents -->
@@ -134,93 +134,3 @@ public class Task {
 - 컬렉션을 저장하기 위한 별도의 테이블이 필요함
 - 값 타입 컬렉션은 영속성 전에(Cascade) + 고아 객체 제거 기능을 필수로 가진다.
 - 개인적인 생각으론 컬렉션을 쓸 일이 있는지 모르겠다. 되도록 일대다 관계를 고려 하자.
-
-## Query 언어를 알아보자!
-> JPA는 데이터를 관리하고 검색하는 데 있어서 강력한 기능을 제공하지만, 복잡한 쿼리를 처리하는 데에는 한계가 있을 수 있음.
-> 이러한 한계를 극복하기 위해 JPA는 다양한 쿼리 방법을 지원하고 있다.
-
-### 종류 
-- JPQL
-- JPA Criteria
-- QueryDSL
-- 네이티브 SQL
-- JDBC API 직접 사용, MyBatis, SpringJdbcTemplate 함께 사용
-
-### JPQL
-- 테이블이 아닌 엔티티 객체를 대상으로 검색
-- SQL과 문법 유사, SELECT, FROM, WHERE, GROUP BY, HAVING, JOIN 지원
-- 동적 쿼리의 어려움: JPQL은 문자열 기반으로 쿼리를 작성하기 때문에, 동적 쿼리를 생성하는 과정에서 오류가 발생하기 쉽다. 이 때문에 복잡한 비즈니스 로직에 따라 쿼리를 조건적으로 변경해야 하는 상황에서는 코드가 복잡해지고 오류를 발견하기 어려울 수 있다.
-- 별칭은 필수(m) (as는 생략가능)
-
-``` java
-//검색
-String jpql = "select m From Member m where m.name like ‘%hello%'"; 
-List<Member> result = em.createQuery(jpql, Member.class)
-          .getResultList();
-```
-
-### Criteria
-- 문자가 아닌 자바코드로 JPQL을 작성할 수 있음
-- JPQL 빌더 역할
-- JPA 공식 기능
-- 단점: 너무 복잡하고 실용성이 없다.
-- Criteria 대신에 QueryDSL 사용 권장
-
-``` java
-//Criteria 사용  준비
-CriteriaBuilder cb = em.getCriteriaBuilder();
-CriteriaQuery<Member> query = cb.createQuery(Member.class); 
-
-//루트  클래스 (조회를  시작할  클래스)
-Root<Member> m = query.from(Member.class); 
-
-//쿼리  생성 CriteriaQuery<Member> cq =
-query.select(m).where(cb.equal(m.get("username"), “kim”)); 
-List<Member> resultList = em.createQuery(cq).getResultList();
-
-```
-
-### QueryDSL
-- 문자가 아닌 자바코드로 JPQL을 작성할 수 있음
-- JPQL 빌더 역할
-- 컴파일 시점에 문법 오류를 찾을 수 있음
-- 동적쿼리 작성 편리함
-- 단순하고 쉬움
-- 실무 사용 권장
-
-``` java
-//JPQL
-//select m from Member m where m.age > 18 
-JPAFactoryQuery query = new JPAQueryFactory(em);
-QMember m = QMember.member;
-
-List<Member> list =
-      query.selectFrom(m) 
-           .where(m.age.gt(18)) 
-           .orderBy(m.name.desc()) 
-           .fetch();
-```
-
-### 네이티브 SQL 소개
-- JPA가 제공하는 SQL을 직접 사용하는 기능
-- JPQL로 해결할 수 없는 특정 데이터베이스에 의존적인 기능
-- 예) 오라클 CONNECT BY, 특정 DB만 사용하는 SQL 힌트
-
-``` java
-String sql =
-    "SELECT ID, AGE, TEAM_ID, NAME FROM MEMBER WHERE NAME = 'kim'"; 
-
-List<Member> resultList =
-            em.createNativeQuery(sql, Member.class).getResultList();
-```
-
-### JDBC 직접 사용, SpringJdbcTemplate 등
-- JPA를 사용하면서 JDBC 커넥션을 직접 사용하거나, 스프링 JdbcTemplate, 마이바티스등을 함께 사용 가능
-- 단 영속성 컨텍스트를 적절한 시점에 강제로 플러시 필요
-- 예) JPA를 우회해서 SQL을 실행하기 직전에 영속성 컨텍스트 수동 플러시
-
-
-
-
-
-10번 TypeQuery, Query 할 차례
