--- a/_posts/Jpa/2021-03-15-Query.md
+++ b/_posts/Jpa/2021-03-15-Query.md
@@ -185,7 +185,7 @@ select m from Member m where m.age > (select avg(m2.age) from Member m2)
 #### 서브 쿼리
 
 - [NOT] EXISTS (subquery): 서브쿼리에 결과가 존재하면 참
-  - {ALL | ANY | SOME} (subquery)
+  - \{ALL | ANY | SOME\} (subquery)
   - ALL 모두 만족하면 참
   - ANY, SOME: 같은 의미, 조건을 하나라도 만족하면 참
 - [NOT] IN (subquery): 서브쿼리의 결과 중 하나라도 같은 것이 있으면 참
@@ -328,3 +328,134 @@ for(Team team : teams) {
 }
 ```
 
+
+#### 페치 조인과 DISTINCT
+- SQL의 DISTINCT는 중복된 결과를 제거하는 명령
+- JPQL의 DISTINCT 2가지 기능 제공
+  - \\1. SQL에 DISTINCT를 추가
+  - \\2. 애플리케이션에서 엔티티 중복 제거(뻥튀기 데이터를 지워준다)
+- 하이버네이트6 부터는 DISTINCT 명령어를 사용하지 않아도 애플리케이션에서 중복 제거가 자동으로 적용된다.
+
+``` java
+select distinct t  
+from Team t join fetch t.members  
+where t.name = ‘팀A’
+``` 
+
+![alt text](image-7.png)
+
+#### 페치 조인과 일반 조인의 차이
+- JPQL은 ELECT 절에 지정한 엔티티만 조회 한다.
+- 페치 조인을 사용할 때는 연관된 엔티티도 함께 조회 한다. (즉시 로딩)
+- 페치 조인은 객체 그래프를 SQL 한번에 조회하는 개념
+
+#### 페치 조인의 특징과 한계
+- 페치 조인 대상에는 별칭을 줄 수 없다.
+  - 하이버네이트는 가능, 가급적 사용X
+- 둘 이상의 컬렉션은 페치 조인 할 수 없다.
+- 컬렉션을 페치 조인하면 페이징 API(setFirstResult, setMaxResults)를 사용할 수 없다.
+  - 일대일, 다대일 같은 단일 값 연관 필드들은 페치 조인해도 페이징 가능
+  - 하이버네이트는 경고 로그를 남기고 메모리에서 페이징(매우 위험)
+- 연관된 엔티티들을 SQL 한 번으로 조회 - 성능 최적화
+- 엔티티에 직접 적용하는 글로벌 로딩 전략보다 우선함
+  - @OneToMany(fetch = FetchType.LAZY) //글로벌 로딩 전략
+- 실무에서 글로벌 로딩 전략은 모두 지연 로딩
+- 최적화가 필요한 곳은 페치 조인 적용
+
+#### 일대다 관계 팁!
+> 페치조인이나 일반조인으로 데이터를 가져올때 한번에 in절을 사용하여 가져오는 방법
+``` java
+// 엔티티에서 직접 설정
+@OneToMany
+@BatchSize(size = 10)
+private List<Order> orders = new ArrayList<>();
+
+// properties
+spring.jpa.properties.hibernate.default_batch_fetch_size=10
+
+// yml
+spring:
+  jpa:
+    properties:
+      hibernate:
+        default_batch_fetch_size: 10
+```
+
+``` java
+// 사용 예제
+@Entity
+public class Book {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    private String title;
+    @ManyToOne(fetch = FetchType.LAZY)
+    private Author author;
+    // getter와 setter 생략
+}
+
+@Entity
+public class Author {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    private String name;
+    // getter와 setter 생략
+}
+
+public List<Book> findAllBooksWithAuthors() {
+    return entityManager.createQuery(
+        "SELECT b FROM Book b JOIN FETCH b.author", Book.class)
+    .getResultList();
+}
+
+```
+
+#### Named 쿼리
+
+> 애플리케이션 로딩 시점에 초기화 및 검증  
+> 한 마디로 미리 정의해 두고 쓰기
+
+``` java
+// 어노테이션
+@Entity
+@NamedQuery(
+        name = "Member.findByUsername",
+        query="select m from Member m where m.username = :username") 
+public class Member {
+    ... 
+}
+
+List<Member> resultList =
+  em.createNamedQuery("Member.findByUsername", Member.class) 
+        .setParameter("username", "회원1")
+        .getResultList();
+```
+
+``` xml
+[META-INF/persistence.xml]
+<persistence-unit name="jpabook" >
+  <mapping-file>META-INF/ormMember.xml</mapping-file>
+
+[META-INF/ormMember.xml]
+<?xml version="1.0" encoding="UTF-8"?>
+<entity-mappings xmlns="http://xmlns.jcp.org/xml/ns/persistence/orm" version="2.1">
+  <named-query name="Member.findByUsername"> 
+  <query><![CDATA[
+              select m 
+              from Member m
+              where m.username = :username 
+          ]]></query>
+  </named-query>
+  <named-query name="Member.count">
+  <query>select count(m) from Member m</query> 
+  </named-query>
+</entity-mappings>
+```
+
+#### 벌크 연산
+- 쿼리 한 번으로 여러 테이블 변경하는 방법 지원(ex : update ... where p.age > 20)
+- 벌크 연산은 데이터베이스에서 직접 진행하기 때문에 영속성 컨텍스트와 싱크가 안맞을 수 있다.
+  - 싱크 방법 두가지
+    - 1. 벌크 연산을 먼저 실행
+    - 2. 벌크 연산 후 clear() 후 다시 불러와 사용한다.
