--- a/_posts/Jpa/2021-03-15-Query.md
+++ b/_posts/Jpa/2021-03-15-Query.md
@@ -127,7 +127,7 @@ Query query =
 #### 결과 조회
 - query.getResultList(): 결과가 하나 이상일 때, 리스트 반환
   - 결과가 없으면 빈 리스트 반환
-- query.getSingleResult(): 결과가 정확히 하나, 단일 객체 반환
+- query.getSingleResult(): 결과가 정확히 하나, 단일 객체 반환(되도록 query.getResultList()을 쓰자)
   - 결과가 없으면: javax.persistence.NoResultException
   - 둘 이상이면: javax.persistence.NonUniqueResultException
 
@@ -144,7 +144,7 @@ query.setParameter(1, usernameParam);
 
 ```
 
-#### 프로젝션 방법 - SELECT 절에 조회할 대상을 지정하는 것
+#### 프로젝션 방법 - SELECT 절에 조회할 대상(컬럼)을 지정하는 것
 1. Query 타입으로 조회
 2. Object[] 타입으로 조회
 3. new 명령어로 조회
@@ -185,10 +185,11 @@ select m from Member m where m.age > (select avg(m2.age) from Member m2)
 #### 서브 쿼리
 
 - [NOT] EXISTS (subquery): 서브쿼리에 결과가 존재하면 참
-  - \{ALL | ANY | SOME\} (subquery)
+  - \{ALL \| ANY \| SOME\} (subquery)
   - ALL 모두 만족하면 참
   - ANY, SOME: 같은 의미, 조건을 하나라도 만족하면 참
 - [NOT] IN (subquery): 서브쿼리의 결과 중 하나라도 같은 것이 있으면 참
+
 
 ``` java
 // 팀A 소속인 회원
@@ -278,7 +279,7 @@ select m.username from Team t join t.members m // -> 성공
 - JPQL에서 성능 최적화를 위해 제공하는 기능
 - 연관된 엔티티나 컬렉션을 SQL 한 번에 함께 조회하는 기능
 - join fetch 명령어 사용
-- 페치 조인 ::= [ LEFT [OUTER] | INNER ] JOIN FETCH 조인경로
+- 페치 조인 ::= [ LEFT [OUTER] \| INNER ] JOIN FETCH 조인경로
 
 ``` java
 // 회원을 조회하면서 연관된 팀도 함께 조회(SQL 한 번에)
@@ -332,8 +333,8 @@ for(Team team : teams) {
 #### 페치 조인과 DISTINCT
 - SQL의 DISTINCT는 중복된 결과를 제거하는 명령
 - JPQL의 DISTINCT 2가지 기능 제공
-  - \\1. SQL에 DISTINCT를 추가
-  - \\2. 애플리케이션에서 엔티티 중복 제거(뻥튀기 데이터를 지워준다)
+  - 1\. SQL에 DISTINCT를 추가
+  - 2\. 애플리케이션에서 엔티티 중복 제거(뻥튀기 데이터를 지워준다)
 - 하이버네이트6 부터는 DISTINCT 명령어를 사용하지 않아도 애플리케이션에서 중복 제거가 자동으로 적용된다.
 
 ``` java
@@ -364,6 +365,7 @@ where t.name = ‘팀A’
 
 #### 일대다 관계 팁!
 > 페치조인이나 일반조인으로 데이터를 가져올때 한번에 in절을 사용하여 가져오는 방법
+
 ``` java
 // 엔티티에서 직접 설정
 @OneToMany
@@ -433,11 +435,13 @@ List<Member> resultList =
 ```
 
 ``` xml
-[META-INF/persistence.xml]
+<!-- xml방법 -->
+
+<!-- [META-INF/persistence.xml] -->
 <persistence-unit name="jpabook" >
   <mapping-file>META-INF/ormMember.xml</mapping-file>
 
-[META-INF/ormMember.xml]
+<!-- [META-INF/ormMember.xml] -->
 <?xml version="1.0" encoding="UTF-8"?>
 <entity-mappings xmlns="http://xmlns.jcp.org/xml/ns/persistence/orm" version="2.1">
   <named-query name="Member.findByUsername"> 
