--- a/_posts/Jpa/2021-03-25-Spring_JPA_1.md
+++ b/_posts/Jpa/2021-03-25-Spring_JPA_1.md
@@ -6,7 +6,7 @@ category: Jpa
 more_posts: posts.md
 tags:     Jpa
 ---
-# [JPA 활용] 1. Spring
+# [JPA 활용] 6. Spring과 JPA
 
 <!--more-->
 <!-- Table of contents -->
@@ -26,6 +26,8 @@ tags:     Jpa
   - 엔티티의 모든 값이 노출되면 위험하다.
   - 스펙을 맞추기 위한 로직이 추가 될 수 있다.
   - 엔티티가 변경되면 API 스펙이 변한다.
+  - jackson 라이브러리는 기본적으로 이 프록시 객체를 json으로 어떻게 생성해야 하는지 모름 > 예외 발생 (Hibernate5Module 을 스프링 빈으로 등록하면 해결되긴 함)
+    - 하지만 이것 마저 @JsonIgnore가 없을경우 양방향 연관관계를 계속 로딩하게 되어 무한루프에 빠질 수 있다.
 
 ### Entity
 - id는 편의를 위해 id로 명시 후 name을 따로 써주자
@@ -149,3 +151,171 @@ public class ItemService {
     }
 }
 ```
+
+## tip
+> @Component 어노테이션이 붙은 클래스에서 @PostConstruct 어노테이션이 붙은 메소드를 사용하면, 해당 컴포넌트의 초기화 시점에 자동으로 실행되는 메소드를 정의할 수 있다.  
+> 테스트를 위한 초기값 셋팅에 활용해 보자.
+
+``` java
+@Component
+public class MyComponent {
+    
+    @PostConstruct
+    public void init() {
+        // 초기화 로직을 여기에 작성
+        System.out.println("컴포넌트가 초기화되었습니다.");
+    }
+}
+```
+
+## 페치 조인을 통한 성능 최적화
+> 페치 조인은 강력한 도구이지만, 모든 상황에 무분별하게 적용하는 것이 아니라, 필요한 경우와 상황에 맞게 적절히 사용해야한다.  
+> 성능 문제를 해결하기 위해 페치 조인을 사용하기 전에, 실제 성능 이슈가 발생하는지 분석해 보고 사용하자.
+
+### Before : toOne 관계 성능 최적화 전
+> 쿼리가 총 1 + N + N번 실행된다.
+
+``` java
+List<Order> all = orderRepository.findAllByString(new OrderSearch()); 
+for (Order order : all) {
+    order.getMember().getName(); //Lazy 강제 초기화 
+    order.getDelivery().getAddress(); //Lazy 강제 초기환 
+}
+```
+
+### After Version 1 : 페치 조인으로 성능 최적화
+> 페치 조인으로 한번의 쿼리로 데이터를 가져온다.
+
+``` java
+public List<Order> findAllWithMemberDelivery() { 
+    return em.createQuery(
+        "select o from Order o" +
+        " join fetch o.member m" +
+        " join fetch o.delivery d", Order.class)
+                .getResultList(); 
+}
+```
+
+### After Version 2 : 페치 조인 및 DTO로 바로 조회
+> DTO생성자를 통해 DTO로 바로 리턴받아 온다.
+
+``` java
+public List<OrderSimpleQueryDto> findOrderDtos() { 
+    return em.createQuery(
+        "select new
+        jpabook.jpashop.repository.order.simplequery.OrderSimpleQueryDto(o.id, m.name, 
+        o.orderDate, o.status, d.address)" +
+        " from Order o" + 
+        " join o.member m" +
+        " join o.delivery d", OrderSimpleQueryDto.class)
+                .getResultList(); 
+}
+```
+
+### 엔티티 vs DTO 조회 방법 권장 순서
+1. 필요하면 페치 조인으로 성능을 최적화 한다.    대부분의 성능 이슈가 해결된다.
+2. 그래도 안되면 DTO로 직접 조회하는 방법을 사용한다.
+3. 최후의 방법은 JPA가 제공하는 네이티브 SQL이나 스프링 JDBC Template을 사용해서 SQL을 직접 사용한다.
+
+### OneToMany 성능 최적화
+
+#### 페치조인을 통한 성능 최적화
+> 페치 조인 사용 시 쿼리 한 번으로 관련 엔티티를 함께 가져올 수 있으나, One쪽 데이터의 중복이 발생할 수 있다.  
+> 이를 방지하기 위해 'distinct'를 사용하면 SQL에서 중복을 제거하고, 애플리케이션 단에서도 중복된 데이터를 처리한다.  
+> 하지만, 이 방법은 페이징 처리에 한계가 있다. 페이징 시 Many쪽을 기준으로 처리해야 하며, 이는 쿼리 실행 후 애플리케이션에서 중복 데이터를 제거하기 때문에 One쪽을 기준으로 한 페이징은 할 수 없다.  
+> 참고 : 컬렉션 페치 조인을 사용하면 페이징이 불가능하다. 하이버네이트는 경고 로그를 남기면서 모든 데이터를 DB에서 읽어오고, 메모리에서 페이징 해버린다(매우 위험하다).
+
+``` java
+public List<Order> findAllWithItem() { 
+    return em.createQuery(
+        "select distinct o from Order o" +
+            " join fetch o.member m" +
+            " join fetch o.delivery d" +
+            " join fetch o.orderItems oi" +
+            " join fetch oi.item i", Order.class)
+        .getResultList(); 
+}
+```
+
+#### 페이징 + 컬렉션 엔티티 조회 성능최적화 방법
+- ToOne 관계는 모두 페치조인 한다.
+- ToMany 관계는 벌크 연산 되도록 설정한다.(IN 쿼리 사용)
+  - hibernate.default_batch_fetch_size: 글로벌 설정
+  - @BatchSize: 개별 최적화
+  - 참고1 : 벌크의 적정 사이즈는 100~1000 사이
+  - 참고2 : 스프링 부트 3.1 부터는 하이버네이트 6.2를 사용한다. 하이버네이트 6.2 부터는 where in 대신에 array_contains 를 사용한다. (? 값의 변화가 많은 IN 쿼리 보다 조건이 추가 되도 ? 값이 한번만 사용 되기 때문에 캐싱의 이점이 있다.)
+
+``` java
+public List<Order> findAllWithMemberDelivery(int offset, int limit) { 
+    return em.createQuery(
+            "select o from Order o" +
+                " join fetch o.member m" +
+                " join fetch o.delivery d", Order.class)
+            .setFirstResult(offset) 
+            .setMaxResults(limit) 
+            .getResultList();
+}
+```
+
+#### DTO 직접 조회
+> ToMany도 마찬가지로 직접 DTO생성자를 통한 조회를 해온다. 이때 Many쪽의 데이터가 JPQL로 작성이 되었을 경우 stream을 통해 한꺼번에 IN 쿼리를 사용해 최적화 한다.
+
+``` java
+// ToOne쪽은 먼저 가져온다.
+private List<OrderQueryDto> findOrders() { 
+    return em.createQuery(
+            "select new
+            jpabook.jpashop.repository.order.query.OrderQueryDto(o.id, m.name, o.orderDate, o.status, d.address)" +
+            " from Order o" + 
+            " join o.member m" +
+            " join o.delivery d", OrderQueryDto.class)
+            .getResultList();
+}
+// Many쪽은 ToOne에서 나온 데이터를 토대로 IN 쿼리 사용
+private Map<Long, List<OrderItemQueryDto>> findOrderItemMap(List<Long> orderIds) {
+    List<OrderItemQueryDto> orderItems = em.createQuery(
+            "select new
+            jpabook.jpashop.repository.order.query.OrderItemQueryDto(oi.order.id, i.name, 
+            oi.orderPrice, oi.count)" +
+            " from OrderItem oi" + 
+            " join oi.item i" +
+            " where oi.order.id in :orderIds", OrderItemQueryDto.class)
+            .setParameter("orderIds", orderIds) 
+            .getResultList();
+
+return orderItems.stream()
+            .collect(Collectors.groupingBy(OrderItemQueryDto::getOrderId)); 
+}
+
+
+// Java단
+//루트 조회(toOne 코드를 모두 한번에 조회)
+List<OrderQueryDto> result = findOrders(); 
+//orderItem 컬렉션을 MAP 한방에 조회
+Map<Long, List<OrderItemQueryDto>> orderItemMap = findOrderItemMap( result.stream().map(o -> o.getOrderId()).collect(Collectors.toList()) );
+```
+
+#### 권장 순서
+1. 엔티티 조회 방식으로 우선 접근
+   1. 페치조인으로 쿼리 수를 최적화
+   2. 컬렉션 최적화
+      1. 페이징 필요 hibernate.default_batch_fetch_size , @BatchSize 로 최적화
+      2. 페이징 필요X 페치 조인 사용
+2. 엔티티 조회 방식으로 해결이 안되면 DTO 조회 방식 사용
+3. DTO 조회 방식으로 해결이 안되면 NativeSQL or 스프링 JdbcTemplate
+
+
+## OSIV와 성능 최적화
+- Open Session In View: 하이버네이트 
+- Open EntityManager In View: JPA
+
+> 우리가 지연로딩을 View Templete이나 Controller단에서 사용할 수 있는 이유는 스프링의 JPA는 OSIV값이 기본 true이며, 이 설정은 HTTP 요청이 시작될 때 오픈된 JPA 세션이나 엔티티 매니저가 요청이 끝날 때까지 열려 있게 된다. 이는 요청 처리 도중에 발생하는 모든 지연 로딩(Lazy Loading) 호출이 같은 JPA 세션 내에서 이루어질 수 있도록 보장해주기 때문이다.  
+> 그런데 이 전략은 너무 오랜시간동안 데이터베이스 커넥션 리소스를 사용하기 때문에, 실시간 트래픽이 중요한 애플리 케이션에서는 커넥션이 모자랄 수 있다. 이것은 결국 장애로 이어진다.  
+> OSIV를 끄면 모든 지연로딩을 트랜잭션 안에서 처리해야 한다. 결론적으로 트랜잭션이 끝나기 전에 지연 로딩을 강제로 호출해 두어야 한다. 이는 소스의 복잡성이 증가할 수 있다.  
+> 그럴땐 관심사에 맞춰 서비스를 분리하는것도 하나의 방법이다.  
+> ex : OrderService
+> - OrderService: 핵심 비즈니스 로직
+> - OrderQueryService: 화면이나 API에 맞춘 서비스 (주로 읽기 전용 트랜잭션 사용)
+
+### 추천방식
+> 고객 서비스의 실시간 API는 OSIV를 끄고, ADMIN 처럼 커넥션을 많이 사용하지 않는 곳에서는 OSIV를 켠다.
