--- a/_posts/Jpa/2021-03-25-Spring_JPA_1.md
+++ b/_posts/Jpa/2021-03-25-Spring_JPA_1.md
@@ -167,12 +167,13 @@ public class MyComponent {
     }
 }
 ```
+## 성능 최적화
 
-## 페치 조인을 통한 성능 최적화
+### 페치 조인을 통한 성능 최적화
 > 페치 조인은 강력한 도구이지만, 모든 상황에 무분별하게 적용하는 것이 아니라, 필요한 경우와 상황에 맞게 적절히 사용해야한다.  
 > 성능 문제를 해결하기 위해 페치 조인을 사용하기 전에, 실제 성능 이슈가 발생하는지 분석해 보고 사용하자.
 
-### Before : toOne 관계 성능 최적화 전
+#### Before : toOne 관계 성능 최적화 전
 > 쿼리가 총 1 + N + N번 실행된다.
 
 ``` java
@@ -183,7 +184,7 @@ for (Order order : all) {
 }
 ```
 
-### After Version 1 : 페치 조인으로 성능 최적화
+#### After Version 1 : 페치 조인으로 성능 최적화
 > 페치 조인으로 한번의 쿼리로 데이터를 가져온다.
 
 ``` java
@@ -196,7 +197,7 @@ public List<Order> findAllWithMemberDelivery() {
 }
 ```
 
-### After Version 2 : 페치 조인 및 DTO로 바로 조회
+#### After Version 2 : DTO로 바로 조회
 > DTO생성자를 통해 DTO로 바로 리턴받아 온다.
 
 ``` java
@@ -212,8 +213,8 @@ public List<OrderSimpleQueryDto> findOrderDtos() {
 }
 ```
 
-### 엔티티 vs DTO 조회 방법 권장 순서
-1. 필요하면 페치 조인으로 성능을 최적화 한다.    대부분의 성능 이슈가 해결된다.
+#### 엔티티 vs DTO 조회 방법 권장 순서
+1. 필요하면 페치 조인으로 성능을 최적화 한다. 대부분의 성능 이슈가 해결된다.
 2. 그래도 안되면 DTO로 직접 조회하는 방법을 사용한다.
 3. 최후의 방법은 JPA가 제공하는 네이티브 SQL이나 스프링 JDBC Template을 사용해서 SQL을 직접 사용한다.
 
