--- a/_posts/Jpa/2021-03-25-Spring_JPA_1.md
+++ b/_posts/Jpa/2021-03-25-Spring_JPA_1.md
@@ -169,11 +169,9 @@ public class MyComponent {
 ```
 ## 성능 최적화
 
-### 페치 조인을 통한 성능 최적화
-> 페치 조인은 강력한 도구이지만, 모든 상황에 무분별하게 적용하는 것이 아니라, 필요한 경우와 상황에 맞게 적절히 사용해야한다.  
-> 성능 문제를 해결하기 위해 페치 조인을 사용하기 전에, 실제 성능 이슈가 발생하는지 분석해 보고 사용하자.
+### ToOne 성능 최적화
 
-#### Before : toOne 관계 성능 최적화 전
+#### Before : 성능 최적화 전
 > 쿼리가 총 1 + N + N번 실행된다.
 
 ``` java
@@ -185,7 +183,8 @@ for (Order order : all) {
 ```
 
 #### After Version 1 : 페치 조인으로 성능 최적화
-> 페치 조인으로 한번의 쿼리로 데이터를 가져온다.
+> 페치 조인으로 한번의 쿼리로 데이터를 가져온다. 페치 조인은 강력한 도구이지만, 모든 상황에 무분별하게 적용하는 것이 아니라, 필요한 경우와 상황에 맞게 적절히 사용해야한다.  
+> 성능 문제를 해결하기 위해 페치 조인을 사용하기 전에, 실제 성능 이슈가 발생하는지 분석해 보고 사용하자.
 
 ``` java
 public List<Order> findAllWithMemberDelivery() { 
