--- a/_posts/Jpa/2021-03-15-Query.md
+++ b/_posts/Jpa/2021-03-15-Query.md
@@ -343,7 +343,7 @@ from Team t join fetch t.members
 where t.name = ‘팀A’
 ``` 
 
-![alt text](image-7.png)
+![alt text](/assets/img/jpa/image-7.png)
 
 #### 페치 조인과 일반 조인의 차이
 - JPQL은 ELECT 절에 지정한 엔티티만 조회 한다.
