--- a/_posts/Jpa/2021-01-28-Jpa.md
+++ b/_posts/Jpa/2021-01-28-Jpa.md
@@ -27,7 +27,7 @@ tags:     Jpa
 - 하이버네이트는 40가지 이상의 데이터베이스 방언 지원
 
 ## JPA 구동 방식
-![alt text](image.png)
+![alt text](/assets/img/jpa/image.png)
 
 ### 주의  
 - 엔티티 매니저 팩토리는 하나만 생성해서 애플리케이션 전체에 서 공유
@@ -48,7 +48,7 @@ tags:     Jpa
 - 준영속 (detached) : 영속성 컨텍스트에 저장되었다가 분리된 상태
 - 삭제 (removed)  : 삭제된 상태
 
-![alt text](image-1.png)
+![alt text](/assets/img/jpa/image-1.png)
 
 ## 영속성 컨텍스트의 이점
 - 1차 캐시
