--- a/_posts/Jpa/2021-02-18-Entity.md
+++ b/_posts/Jpa/2021-02-18-Entity.md
@@ -156,7 +156,7 @@ public class Member {
 
 > 슈퍼타입 서브타입 논리 모델을 실제 물리 모델로 구현하는 방법  
 > 부모 엔티티와 자식 엔티티가 필요할때 사용  
-![alt text](image-2.png)
+![alt text](/assets/img/jpa/image-2.png)
 
 ### 주요 어노테이션
 
@@ -206,10 +206,10 @@ public class Book extends Item{
 }
 ```
 #### JOINED
-![alt text](image-5.png)
+![alt text](/assets/img/jpa/image-5.png)
 
 #### SINGLE_TABLE
-![alt text](image-6.png)
+![alt text](/assets/img/jpa/image-6.png)
 
 
 ### @MappedSuperclass
@@ -217,7 +217,7 @@ public class Book extends Item{
 > 공통 매핑 정보가 필요할 때 사용  
 > 상속 관계에는 있지만 엔티티에는 영향을 주기 싫은 경우 사용(부모 엔티티가 따로 만들어지는걸 원하지 않음)  
 
-![alt text](image-3.png)
+![alt text](/assets/img/jpa/image-3.png)
 
 - 상속관계 매핑X
 - 엔티티X, 테이블과 매핑X
@@ -261,4 +261,4 @@ public class Book extends Item{
 }
 ```
 
-![alt text](image-4.png)
+![alt text](/assets/img/jpa/image-4.png)
