--- a/_posts/Etc/2022-10-10-English.md
+++ b/_posts/Etc/2022-10-10-English.md
@@ -27,7 +27,7 @@ tags:     Etc
 <!-- text -->
 <table style="width:100%;">
     <tr><th>내용</th><th>뜻</th></tr>
-    <tr><td>but then i started to get better</td><td>그러나 그 후에 나는 나아지기 시작했다</td></tr>
+    <tr><td>but then I started to get better</td><td>그러나 그 후에 나는 나아지기 시작했다</td></tr>
     <tr><td>Trains could go along way</td><td>기차는 먼 길을 갈 수 있다</td></tr>
     <tr><td>during the storm, the power went off.</td><td>폭풍우가 몰아치는 동안, 전기가 끊겼다</td></tr>
     <tr><td>I have been to some really interesting places.</td><td>저는 정말 재미있는 곳들을 가보았습니다.(~해왔다)</td></tr>
@@ -73,7 +73,15 @@ tags:     Etc
     <tr><td>people helped make the kinds of dog we know today.</td><td>사람들은 오늘날 우리가 알고 있는 종류의 개를 만드는 것을 도왔습니다.(help 설명 참고)</td></tr>
     <tr><td>Those wolves had pups that humans raised</td><td>그 늑대들은 사람들이 키운 새끼들을 가졌다</td></tr>
     <tr><td>it rains a lot there</td><td>비가 많이 온다 거기는</td></tr>
-    <tr><td>6월 1일 할 것</td><td></td></tr>
+    <tr><td>Lisa is glad the class likes their fashion show</td><td>리사는 반 친구들이 패션쇼를 좋아해 줘서 기뻐요</td></tr>
+    <tr><td>They were often worn by fisherman</td><td>그것들은 종종 어부들에 의해 착용되었다.</td></tr>
+    <tr><td>but they were not very colorful, As you can see today sweaters are much more colorful</td><td>하지만 그것들은 아주 다채롭지 않았어요. 오늘날 볼 수 있는 것처럼, 지금은 스웨터가 훨씬 더 다채로워졌죠.</td></tr>
+    <tr><td>Only a few students put their hands up.</td><td>소수의 학생들만 손을 들고 있습니다.</td></tr>
+    <tr><td>Not many kids our age wear mittens.</td><td>우리 나이 또래의 아이들 중에는 벙어리 장갑을 끼는 아이들이 많지 않습니다</td></tr>
+    <tr><td>You can go take your coat off</td><td>당신은 가서 코트를 벗을 수 있습니다(전치사와 결합으로 다른뜻을 나타내는 구동사는 to나 ing없이도 사용 된다.)</td></tr>
+    <tr><td>You can go take your coat off</td><td>당신은 가서 코트를 벗을 수 있습니다(전치사와 결합으로 다른뜻을 나타내는 구동사는 to나 ing없이도 사용 된다.)</td></tr>
+    
+    6월 9일 해야됨
 </table>
 
 ## might와 may차이점
