--- a/_posts/Etc/2024-02-28-Grafana.md
+++ b/_posts/Etc/2024-02-28-Grafana.md
@@ -202,17 +202,46 @@ sudo systemctl enable prometheus
 7. 나머지 설정은 기본값을 사용해도 괜찮지만, 특정 환경에 맞추어 조정할 수 있다.
 8. Save & Test 버튼을 클릭하여 설정을 저장하고, 데이터 소스 연결을 테스트 한다.
 
-![alt text](/assets/img/etc/image.png)
-![alt text](/assets/img/etc/image-1.png)
+![alt text](/assets/img/etc/grafana/image.png)
+![alt text](/assets/img/etc/grafana/image-1.png)
 
 #### 대시보드 구성하기
 > Prometheus 데이터 소스를 추가한 후, 그라파나에서 다양한 모니터링 대시보드를 구성할 수 있다.
 
 1. 대시보드 생성: 오른쪽 상단 import dashboard
-![alt text](/assets/img/etc/image-2.png)
+![alt text](/assets/img/etc/grafana/image-2.png)
 
 2. 원하는 대시보드 로드(1860, 11074, 13978등이 있다.)
-![alt text](/assets/img/etc/image-3.png)
+![alt text](/assets/img/etc/grafana/image-3.png)
 
 3. 임포트 후 완료
-![alt text](/assets/img/etc/image-4.png)
+![alt text](/assets/img/etc/grafana/image-4.png)
+
+### kafka 모니터링 추가
+
+> kafka-exporter를 도커 컴포즈로 추가. network_mode: "host" 옵션을 
+
+``` yml
+version: '3.8'
+services:
+  kafka-exporter:
+    image: danielqsj/kafka-exporter
+    command: ["--kafka.server=localhost:9092", "--kafka.server=localhost:9093", "--kafka.server=localhost:9094"]
+    ports:
+      - "9308:9308"
+    restart: always
+    network_mode: "host"
+```
+
+> 프로메테우스 수정 후 재기동
+
+``` yml
+...
+  - job_name: 'kafka'
+    static_configs:
+      - targets: ['localhost:9308']
+```
+
+> 그라파나 대시보드를 추가해 준다.(7589대시보드는 버전이 안맞는지 안나와서 12931으로 설정)
+
+![alt text](/assets/img/etc/grafana/image-5.png)
