--- a/_posts/Etc/2022-10-10-English.md
+++ b/_posts/Etc/2022-10-10-English.md
@@ -79,7 +79,15 @@ tags:     Etc
     <tr><td>Only a few students put their hands up.</td><td>소수의 학생들만 손을 들고 있습니다.</td></tr>
     <tr><td>Not many kids our age wear mittens.</td><td>우리 나이 또래의 아이들 중에는 벙어리 장갑을 끼는 아이들이 많지 않습니다</td></tr>
     <tr><td>You can go take your coat off</td><td>당신은 가서 코트를 벗을 수 있습니다(전치사와 결합으로 다른뜻을 나타내는 구동사는 to나 ing없이도 사용 된다.)</td></tr>
-    <tr><td>You can go take your coat off</td><td>당신은 가서 코트를 벗을 수 있습니다(전치사와 결합으로 다른뜻을 나타내는 구동사는 to나 ing없이도 사용 된다.)</td></tr>
+    <tr><td>it was during the last days of the Han dynasty of China in the second and third centuries.</td><td>그것은 중국 한나라 말기, 즉 2세기와 3세기 동안의 일이었다.</td></tr>
+    <tr><td>Generals and nobles were fighting to take power</td><td>장군과 귀족들은 권력을 차지하기 위해 싸우고 있었습니다</td></tr>
+    <tr><td>Three generals were very strong at this time</td><td>이때 세 명의 장군은 매우 강했습니다</td></tr>
+    <tr><td>Cao Cao lost two battles with Liu Bei</td><td>조조는 유비와의 두 번의 전투에서 패했습니다</td></tr>
+    <tr><td>He was stoped by Liu Bei on the northwest shore of the great river</td><td>그는 큰 강의 북서쪽 해안에서 유비에 의해 저지되었습니다</td></tr>
+    <tr><td>He could not defeat Liu Bei by himself</td><td>그는 유비를 혼자서 이길 수 없었습니다</td></tr>
+    <tr><td>He grew rich by collecting tax from the people</td><td>그는 백성들로부터 세금을 징수하여 부자가 되었습니다</td></tr>
+    <tr><td></td><td></td></tr>
+    <tr><td></td><td></td></tr>
     
     6월 9일 해야됨
 </table>
