--- a/_posts/Spring/2022-11-13-Lombok.md
+++ b/_posts/Spring/2022-11-13-Lombok.md
@@ -2,9 +2,9 @@
 layout:   post
 title:    "Lombok"
 subtitle: "Lombok 학습"
-category: Library
+category: Spring
 more_posts: posts.md
-tags:     Library
+tags:     Spring
 ---
 # Lombok
 
