--- a/_posts/Etc/2022-10-10-English.md
+++ b/_posts/Etc/2022-10-10-English.md
@@ -86,10 +86,10 @@ tags:     Etc
     <tr><td>He was stoped by Liu Bei on the northwest shore of the great river</td><td>그는 큰 강의 북서쪽 해안에서 유비에 의해 저지되었습니다</td></tr>
     <tr><td>He could not defeat Liu Bei by himself</td><td>그는 유비를 혼자서 이길 수 없었습니다</td></tr>
     <tr><td>He grew rich by collecting tax from the people</td><td>그는 백성들로부터 세금을 징수하여 부자가 되었습니다</td></tr>
+    <tr><td>The princess, made up her mind to do something</td><td>공주는 무언가를 하기로 결심했습니다(made up her mind : 마음을 정하다)</td></tr>
     <tr><td></td><td></td></tr>
     <tr><td></td><td></td></tr>
-    
-    6월 9일 해야됨
+    <tr><td></td><td></td></tr>
 </table>
 
 ## might와 may차이점
