--- a/_posts/Etc/2022-10-10-English.md
+++ b/_posts/Etc/2022-10-10-English.md
@@ -87,7 +87,10 @@ tags:     Etc
     <tr><td>He could not defeat Liu Bei by himself</td><td>그는 유비를 혼자서 이길 수 없었습니다</td></tr>
     <tr><td>He grew rich by collecting tax from the people</td><td>그는 백성들로부터 세금을 징수하여 부자가 되었습니다</td></tr>
     <tr><td>The princess, made up her mind to do something</td><td>공주는 무언가를 하기로 결심했습니다(made up her mind : 마음을 정하다)</td></tr>
-    <tr><td></td><td></td></tr>
+    <tr><td>she sent a message to the entire Kingdom</td><td>그녀는 전 왕국에 메시지를 보냈습니다</td></tr>
+    <tr><td>Any person who can stop the Rajag from being bored can choose their own reward</td><td>라자그를 지루하지 않게 할 수 있는 누구든지, 자신만의 보상을 선택할 수 있다.(who ... bored 는 any person을 설명한다.)</td></tr>
+    <tr><td>The director tells the crew what time to be on location</td><td>"to be"는 "도착하다"</td></tr>
+    <tr><td>Some movie stars like to show up late for a shoot</td><td>일부 영화 스타들은 촬영장에 늦게 도착하는 것을 좋아한다(show up : 나타나다)</td></tr>
     <tr><td></td><td></td></tr>
     <tr><td></td><td></td></tr>
 </table>
