--- a/_posts/Jpa/2021-04-10-Querydsl.md
+++ b/_posts/Jpa/2021-04-10-Querydsl.md
@@ -124,6 +124,10 @@ compileQuerydsl {
 ### Q 타입 생성 방법
 > Q타입 생성은 타입 안전성을 보장하고, 쿼리 작성 시 컴파일 타임에 오류를 발견할 수 있도록 한다. 이는 개발자가 코드를 통해 직접 쿼리를 작성할 때 오타나 잘못된 필드명을 사용하는 등의 실수를 사전에 방지할 수 있게 해, 더 안정적이고 효율적인 쿼리 작성을 가능하게 한다.  
 
-- Gradle IntelliJ 사용법
-  - Gradle Tasks build clean
-  - Gradle Tasks other compileQueryds
+- Gradle IntelliJ 사용법(스프링 부트 2.x)
+  - Gradle > Tasks > build > clean
+  - Gradle > Tasks > other > compileQueryds
+
+- Gradle IntelliJ 사용법(스프링 부트 3.x)
+  - Gradle > Tasks > build > clean
+  - Gradle > Tasks > build > build
