[feat] 유레카 및 게이트웨이

--- a/_posts/React/2024-05-01-Setting.md
+++ b/_posts/React/2024-05-01-Setting.md
@@ -33,7 +33,7 @@ npm start
 
 ```
 
-![img.png](img.png)
+![img.png](/assets/img/react/240501/img.png)
 
 ## 리액트 템플릿
 > 빠른 구성 및 진행을 위해 리액트 템플릿을 다운로드하여 사용하기로 했다.(다운로드 생략)  
@@ -46,4 +46,4 @@ npm install
 npm start
 ```
 
-![img_1.png](img_1.png)
+![img_1.png](/assets/img/react/240501/img_1.png)
