--- a/_posts/Spring/2022-12-01-Eureka.md
+++ b/_posts/Spring/2022-12-01-Eureka.md
@@ -6,7 +6,7 @@ category: Spring
 more_posts: posts.md
 tags:     Spring
 ---
-# [Eureka] SpringBoot MAS를 위한 Eureka
+# [Eureka] SpringBoot MSA를 위한 Eureka
 
 <!--more-->
 <!-- Table of contents -->
