[feat] 시큐리티 설정

--- a/_posts/Spring/2022-11-13-Lombok.md
+++ b/_posts/Spring/2022-11-13-Lombok.md
@@ -6,7 +6,7 @@ category: Spring
 more_posts: posts.md
 tags:     Spring
 ---
-# Lombok
+# [Library] Lombok
 
 <!--more-->
 <!-- Table of contents -->
